# pyxmc

./: .gitignore  README.md  pyproject.toml
pyxmc/: __init__.py  model.py  variables.py
tests/: test_model.py  xlsx_diff.py
tests/template_xlsx/: pyxmc_test_core.xlsx
