[tool.poetry]
name = "pyxmc"
version = "0.1.0"
description = "Poetry Excel Monte Carlo report builder"
authors = ["Humphrey Drummond <hum3@drummond.info>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
arrow = "^1.2.3"
numpy = "^1.25.2"
numpy-financial = "^1.0.0"
scipy = "^1.11.2"
xlsxwriter = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
